--- a/SEP21/Web.config
+++ b/SEP21/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SEP21-20210601101554.mdf;Initial Catalog=aspnet-SEP21-20210601101554;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SEP24Team5Entities" connectionString="metadata=res://*/Models.WebKhoaCNTT.csdl|res://*/Models.WebKhoaCNTT.ssdl|res://*/Models.WebKhoaCNTT.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tuleap.vanlanguni.edu.vn,18082;initial catalog=SEP24Team5;user id=SEP24Team5;password=Webcntt123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -18,7 +19,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-	<globalization fileEncoding="utf-8" />
+    <globalization fileEncoding="utf-8" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
