--- a/SEP21/SEP21.csproj
+++ b/SEP21/SEP21.csproj
@@ -173,6 +173,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Areas\QuanLy\Controllers\AdminHomeController.cs" />
+    <Compile Include="Areas\QuanLy\Controllers\DangNhapController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\BaiVietsController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\GioiThieuxController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\SinhViensController.cs" />
@@ -283,7 +284,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\QuanLy\Views\AdminHome\Index.cshtml" />
-    <Content Include="Areas\QuanLy\Views\AdminHome\Index2.cshtml" />
     <Content Include="Areas\QuanLy\Views\BaiViets\Create.cshtml" />
     <Content Include="Areas\QuanLy\Views\BaiViets\Delete.cshtml" />
     <Content Include="Areas\QuanLy\Views\BaiViets\Details.cshtml" />
@@ -294,6 +294,11 @@
     <Content Include="Areas\QuanLy\Views\GioiThieux\Details.cshtml" />
     <Content Include="Areas\QuanLy\Views\GioiThieux\Edit.cshtml" />
     <Content Include="Areas\QuanLy\Views\GioiThieux\Index.cshtml" />
+    <Content Include="Areas\QuanLy\Views\DangNhap\Create.cshtml" />
+    <Content Include="Areas\QuanLy\Views\DangNhap\Delete.cshtml" />
+    <Content Include="Areas\QuanLy\Views\DangNhap\Details.cshtml" />
+    <Content Include="Areas\QuanLy\Views\DangNhap\Edit.cshtml" />
+    <Content Include="Areas\QuanLy\Views\DangNhap\Index.cshtml" />
     <None Include="Areas\QuanLy\Views\Shared\_AdminLayout.cshtml" />
     <Content Include="assets\css\style.css" />
     <Content Include="assets\img\apple-touch-icon.png" />
