--- a/SEP21/SEP21.csproj
+++ b/SEP21/SEP21.csproj
@@ -175,8 +175,11 @@
     <Compile Include="Areas\QuanLy\Controllers\AdminHomeController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\DangNhapController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\BaiVietsController.cs" />
+    <Compile Include="Areas\QuanLy\Controllers\DoanHoiKhoasController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\GioiThieuxController.cs" />
+    <Compile Include="Areas\QuanLy\Controllers\NCKHsController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\SinhViensController.cs" />
+    <Compile Include="Areas\QuanLy\Controllers\ThanhTichesController.cs" />
     <Compile Include="Areas\QuanLy\QuanLyAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaiVietsController.cs" />
@@ -298,9 +301,6 @@
     <Content Include="Areas\QuanLy\Views\BaiViets\Details.cshtml" />
     <Content Include="Areas\QuanLy\Views\BaiViets\Edit.cshtml" />
     <Content Include="Areas\QuanLy\Views\BaiViets\Index.cshtml" />
-    <Content Include="Areas\QuanLy\Views\GioiThieux\Create.cshtml" />
-    <Content Include="Areas\QuanLy\Views\GioiThieux\Delete.cshtml" />
-    <Content Include="Areas\QuanLy\Views\GioiThieux\Details.cshtml" />
     <Content Include="Areas\QuanLy\Views\GioiThieux\Edit.cshtml" />
     <Content Include="Areas\QuanLy\Views\GioiThieux\Index.cshtml" />
     <Content Include="Areas\QuanLy\Views\DangNhap\Create.cshtml" />
@@ -308,6 +308,16 @@
     <Content Include="Areas\QuanLy\Views\DangNhap\Details.cshtml" />
     <Content Include="Areas\QuanLy\Views\DangNhap\Edit.cshtml" />
     <Content Include="Areas\QuanLy\Views\DangNhap\Index.cshtml" />
+    <Content Include="Areas\QuanLy\Views\DoanHoiKhoas\Create.cshtml" />
+    <Content Include="Areas\QuanLy\Views\DoanHoiKhoas\Delete.cshtml" />
+    <Content Include="Areas\QuanLy\Views\DoanHoiKhoas\Details.cshtml" />
+    <Content Include="Areas\QuanLy\Views\DoanHoiKhoas\Edit.cshtml" />
+    <Content Include="Areas\QuanLy\Views\DoanHoiKhoas\Index.cshtml" />
+    <Content Include="Areas\QuanLy\Views\NCKHs\Create.cshtml" />
+    <Content Include="Areas\QuanLy\Views\NCKHs\Delete.cshtml" />
+    <Content Include="Areas\QuanLy\Views\NCKHs\Details.cshtml" />
+    <Content Include="Areas\QuanLy\Views\NCKHs\Edit.cshtml" />
+    <Content Include="Areas\QuanLy\Views\NCKHs\Index.cshtml" />
     <None Include="Areas\QuanLy\Views\Shared\_AdminLayout.cshtml" />
     <Content Include="assets\css\style.css" />
     <Content Include="assets\img\apple-touch-icon.png" />
@@ -1041,6 +1051,11 @@
     <Content Include="Plugin\ckeditor\samples\toolbarconfigurator\font\fontello.woff" />
     <Content Include="Plugin\ckeditor\samples\toolbarconfigurator\lib\codemirror\LICENSE" />
     <Content Include="Plugin\ckeditor\skins\moono-lisa\readme.md" />
+    <Content Include="Areas\QuanLy\Views\ThanhTiches\Create.cshtml" />
+    <Content Include="Areas\QuanLy\Views\ThanhTiches\Delete.cshtml" />
+    <Content Include="Areas\QuanLy\Views\ThanhTiches\Details.cshtml" />
+    <Content Include="Areas\QuanLy\Views\ThanhTiches\Edit.cshtml" />
+    <Content Include="Areas\QuanLy\Views\ThanhTiches\Index.cshtml" />
     <None Include="Properties\PublishProfiles\FTPProfile.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
