--- a/SEP21/SEP21.csproj
+++ b/SEP21/SEP21.csproj
@@ -173,6 +173,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Areas\QuanLy\Controllers\AdminHomeController.cs" />
+    <Compile Include="Areas\QuanLy\Controllers\AdminLoginsController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\DangNhapController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\BaiVietsController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\DoanHoiKhoasController.cs" />
@@ -194,6 +195,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AdminLoginModels.cs" />
     <Compile Include="Models\AspNetRole.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -319,6 +321,8 @@
     <Content Include="Areas\QuanLy\Views\NCKHs\Details.cshtml" />
     <Content Include="Areas\QuanLy\Views\NCKHs\Edit.cshtml" />
     <Content Include="Areas\QuanLy\Views\NCKHs\Index.cshtml" />
+    <Content Include="Areas\QuanLy\Views\AdminHome\Index 1.cshtml" />
+    <Content Include="Areas\QuanLy\Views\AdminLogin\Login.cshtml" />
     <None Include="Areas\QuanLy\Views\Shared\_AdminLayout.cshtml" />
     <Content Include="assets\css\style.css" />
     <Content Include="assets\img\apple-touch-icon.png" />
@@ -1133,6 +1137,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\QuanLy\Data\" />
+    <Folder Include="Areas\QuanLy\Views\AdminLogins\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
