--- a/SEP21/Web.config
+++ b/SEP21/Web.config
@@ -5,7 +5,6 @@
   -->
 <configuration>
 	<configSections>
-
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 	</configSections>
@@ -30,6 +29,7 @@
 		</modules>
 	</system.webServer>
 	<runtime>
+		<httpRuntime requestValidationMode="2.0" />
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" />
