--- a/SEP21/SEP21.csproj
+++ b/SEP21/SEP21.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Areas\QuanLy\Controllers\NhanVienKhoasController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\SinhViensController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\ThanhTichesController.cs" />
+    <Compile Include="Areas\QuanLy\Controllers\TuyenDungsController.cs" />
     <Compile Include="Areas\QuanLy\QuanLyAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaiVietsController.cs" />
@@ -1046,6 +1047,11 @@
     <Content Include="Areas\QuanLy\Views\ThanhTiches\Details.cshtml" />
     <Content Include="Areas\QuanLy\Views\ThanhTiches\Edit.cshtml" />
     <Content Include="Areas\QuanLy\Views\ThanhTiches\Index.cshtml" />
+    <Content Include="Areas\QuanLy\Views\TuyenDungs\Create.cshtml" />
+    <Content Include="Areas\QuanLy\Views\TuyenDungs\Delete.cshtml" />
+    <Content Include="Areas\QuanLy\Views\TuyenDungs\Details.cshtml" />
+    <Content Include="Areas\QuanLy\Views\TuyenDungs\Edit.cshtml" />
+    <Content Include="Areas\QuanLy\Views\TuyenDungs\Index.cshtml" />
     <None Include="Properties\PublishProfiles\FTPProfile.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
