--- a/SEP21/SEP21.csproj
+++ b/SEP21/SEP21.csproj
@@ -1436,6 +1436,11 @@
     <Content Include="Areas\QuanLy\Views\ThanhTiches\Index.cshtml" />
     <Content Include="images\BaiViet\48" />
     <Content Include="images\BaiViet\49" />
+    <Content Include="Areas\QuanLy\Views\TuyenDungs\Create.cshtml" />
+    <Content Include="Areas\QuanLy\Views\TuyenDungs\Delete.cshtml" />
+    <Content Include="Areas\QuanLy\Views\TuyenDungs\Details.cshtml" />
+    <Content Include="Areas\QuanLy\Views\TuyenDungs\Edit.cshtml" />
+    <Content Include="Areas\QuanLy\Views\TuyenDungs\Index.cshtml" />
     <None Include="Properties\PublishProfiles\FTPProfile.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -1508,6 +1513,9 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\QuanLy\Data\" />
+    <Folder Include="images\DoanHoiKhoa\" />
+    <Folder Include="images\NCKH\" />
+    <Folder Include="images\ThanhTich\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
