--- a/SEP21/SEP21.csproj
+++ b/SEP21/SEP21.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Areas\QuanLy\Controllers\GioiThieuxController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\KhoasController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\LoaiBaiVietsController.cs" />
+    <Compile Include="Areas\QuanLy\Controllers\LoginsController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\ManagerAdminController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\NCKHsController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\NhanVienKhoasController.cs" />
@@ -335,6 +336,11 @@
     <Content Include="Areas\QuanLy\Views\AspNetUsers\Edit.cshtml" />
     <Content Include="Areas\QuanLy\Views\AspNetUsers\Index.cshtml" />
     <Content Include="Areas\QuanLy\Views\BaiViets\Index2.cshtml" />
+    <Content Include="Areas\QuanLy\Views\Logins\Create.cshtml" />
+    <Content Include="Areas\QuanLy\Views\Logins\Delete.cshtml" />
+    <Content Include="Areas\QuanLy\Views\Logins\Details.cshtml" />
+    <Content Include="Areas\QuanLy\Views\Logins\Edit.cshtml" />
+    <Content Include="Areas\QuanLy\Views\Logins\Index.cshtml" />
     <None Include="Areas\QuanLy\Views\Shared\_AdminLayout.cshtml" />
     <Content Include="assets1\images\avatar-1.jpg" />
     <Content Include="assets1\images\avatar-2.jpg" />
