--- a/SEP21/SEP21.csproj
+++ b/SEP21/SEP21.csproj
@@ -45,16 +45,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CKFinder">
-      <HintPath>Plugin\ckfinder\bin\Release\CKFinder.dll</HintPath>
+      <HintPath>..\..\..\..\Downloads\ckfinder\ckfinder\bin\Release\CKFinder.dll</HintPath>
     </Reference>
     <Reference Include="CKFinder_FileEditor">
-      <HintPath>Plugin\ckfinder\bin\Release\CKFinder_FileEditor.dll</HintPath>
+      <HintPath>..\..\..\..\Downloads\ckfinder\ckfinder\bin\Release\CKFinder_FileEditor.dll</HintPath>
     </Reference>
     <Reference Include="CKFinder_ImageResize">
-      <HintPath>Plugin\ckfinder\bin\Release\CKFinder_ImageResize.dll</HintPath>
+      <HintPath>..\..\..\..\Downloads\ckfinder\ckfinder\bin\Release\CKFinder_ImageResize.dll</HintPath>
     </Reference>
     <Reference Include="CKFinder_Watermark">
-      <HintPath>Plugin\ckfinder\bin\Release\CKFinder_Watermark.dll</HintPath>
+      <HintPath>..\..\..\..\Downloads\ckfinder\ckfinder\bin\Release\CKFinder_Watermark.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
@@ -189,6 +189,7 @@
     <Compile Include="Areas\QuanLy\Controllers\GioiThieuxController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\KhoasController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\LoaiBaiVietsController.cs" />
+    <Compile Include="Areas\QuanLy\Controllers\LoginAdminsController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\LoginsController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\ManagerAdminController.cs" />
     <Compile Include="Areas\QuanLy\Controllers\NCKHsController.cs" />
@@ -347,6 +348,11 @@
     <Content Include="Areas\QuanLy\Views\DangKyHoatDongs\Details.cshtml" />
     <Content Include="Areas\QuanLy\Views\DangKyHoatDongs\Edit.cshtml" />
     <Content Include="Areas\QuanLy\Views\DangKyHoatDongs\Index.cshtml" />
+    <Content Include="Areas\QuanLy\Views\LoginAdmins\Create.cshtml" />
+    <Content Include="Areas\QuanLy\Views\LoginAdmins\Delete.cshtml" />
+    <Content Include="Areas\QuanLy\Views\LoginAdmins\Details.cshtml" />
+    <Content Include="Areas\QuanLy\Views\LoginAdmins\Edit.cshtml" />
+    <Content Include="Areas\QuanLy\Views\LoginAdmins\Index.cshtml" />
     <None Include="Areas\QuanLy\Views\Shared\_AdminLayout.cshtml" />
     <Content Include="assets1\images\avatar-1.jpg" />
     <Content Include="assets1\images\avatar-2.jpg" />
