--- a/SEP21/SEP21.csproj
+++ b/SEP21/SEP21.csproj
@@ -338,6 +338,7 @@
     <Content Include="Areas\QuanLy\Views\Daotaos\Details.cshtml" />
     <Content Include="Areas\QuanLy\Views\Daotaos\Edit.cshtml" />
     <Content Include="Areas\QuanLy\Views\Daotaos\Index.cshtml" />
+    <Content Include="Areas\QuanLy\Views\DangKyHoatDongs\Index2.cshtml" />
     <None Include="Areas\QuanLy\Views\Shared\_AdminLayout.cshtml" />
     <Content Include="assets1\images\avatar-1.jpg" />
     <Content Include="assets1\images\avatar-2.jpg" />
