--- a/SEP21/packages.config
+++ b/SEP21/packages.config
@@ -5,6 +5,7 @@
   <package id="Capstone.Owin.Security.VanLang" version="2.0.0.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
   <package id="EPPlus" version="5.7.2" targetFramework="net472" />
+  <package id="ImageResizer" version="4.2.8" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
   <package id="LinqToExcel" version="1.11.0" targetFramework="net472" />
